# PerformanceMonitor-SDK

./: README.md
PerformanceMonitorDemo/: README.md  settings.gradle.kts
PerformanceMonitorDemo/app/: build.gradle.kts
PerformanceMonitorDemo/app/src/androidTest/java/com/example/performancemonitor/: ExampleInstrumentedTest.kt
PerformanceMonitorDemo/app/src/main/: AndroidManifest.xml
PerformanceMonitorDemo/app/src/main/java/com/example/performancemonitor/: MainActivity.kt
PerformanceMonitorDemo/app/src/main/res/layout/: activity_main.xml
PerformanceMonitorDemo/app/src/main/res/values/: strings.xml  themes.xml
PerformanceMonitorDemo/app/src/main/res/values-night/: themes.xml
PerformanceMonitorDemo/app/src/test/java/com/example/performancemonitor/: ExampleUnitTest.kt
PerformanceMonitorDemo/gradle/: libs.versions.toml
PerformanceMonitorDemo/gradle/wrapper/: gradle-wrapper.properties
PerformanceMonitorDemo/performance-sdk/: build.gradle.kts
PerformanceMonitorDemo/performance-sdk/src/androidTest/java/com/example/performance_sdk/: ExampleInstrumentedTest.kt
PerformanceMonitorDemo/performance-sdk/src/main/cpp/: CMakeLists.txt  anr_monitor.cpp
PerformanceMonitorDemo/performance-sdk/src/main/java/com/example/performance_sdk/: AnrMonitor.kt  PerformanceListener.kt  PerformanceMonitor.kt  SmoothnessMonitor.kt
PerformanceMonitorDemo/performance-sdk/src/test/java/com/example/performance_sdk/: ExampleUnitTest.kt
